--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^6.2.0",
     "react": "^16.8.4",
+    "react-dev-utils": "^8.0.0",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.6"
