--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:3002/",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.2.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
