--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.4",
     "if-env": "^1.0.4",
     "mongoose": "^5.4.17",
+    "nodemon": "^1.18.10",
     "path": "^0.12.7"
   },
   "devDependencies": {
